# py_ntcpx

./: .gitignore  .zenodo.json  APK_README.md  ARCHITECTURE_REPORT.md  CHANGELOG.md  CHANGELOG_v2.0.0.md  CHANGELOG_v2.1.0.md  CHANGELOG_v3.0.0.md  CHANGELOG_v3.0.1.md  CHANGELOG_v3.0.2.md  CHANGELOG_v3.0.3.md  CHECKLIST_STATUS.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETE_IMPLEMENTATION_FINAL.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPLETE_RESULTS_REPORT.md  CONTRIBUTING.md  CROSS_CHECK_REPORT.md  CURSOR_AI_PROMPT_py_ntcpx_v2.md  DOI_UPDATE_STATUS.md  FINAL_100_PERCENT_STATUS.md  FINAL_COMPLETE_IMPLEMENTATION_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_CROSS_CHECK_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STAGED_CURSOR_PROMPT.md  FINAL_VERIFICATION_REPORT.md  FIXES_AND_IMPROVEMENTS.md  FIXES_v3.0.0_to_v3.0.1.md  GITHUB_RELEASE_SUMMARY.md  GRANT_ZENODO_PRIVATE_ACCESS.md  HONEST_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INVESTIGATION_ISSUE1_ML_CV_AUC.md  INVESTIGATION_ISSUE2_QUANTEC_RS_NAN.md  INVESTIGATION_ISSUE3_gEUD_VERIFICATION.md  LICENSE  (+56 more)
archive/: README.md  create_apk.ps1
config/: pipeline_config.yaml
docs/: PIPELINE_IMPROVEMENTS_AND_ANALYSIS_REPORT.md  PIPELINE_QA_AND_IMPROVEMENTS.md  RELEASE_NOTES_GITHUB.md
ntcp_models/: __init__.py  legacy_fixed.py  legacy_mle.py  local_classical_calibration.py  modern_logistic.py
output/: README_outputs.md
py_ntcpx_config/: local_refit_bounds.json
quantification/: quantec_bins.json  quantec_stratifier.py
scripts/: create_publication_bundle.py  publication_checklist.py
src/: __init__.py  integration_example.py
tests/: __init__.py  test_auc_calculator.py  test_auto_feature_reducer.py  test_calibration_correction.py  test_data_splitter.py  (+7 more)
(+89 files in other folders)
