[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_ntcpx"
version = "2.0.0"
description = "NTCP analysis and ML pipeline for head & neck cancer"
authors = [{ name = "K. Mondal" }]
readme = "README.md"
license = { text = "See LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "scipy",
  "scikit-learn",
  "xgboost",
  "python-docx",
  "openpyxl",
  "shap",
  "lime",
  "lightgbm"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I"]